Fix layout issues on small form factors

--- a/styles.css
+++ b/styles.css
@@ -689,7 +689,7 @@ h2
     box-shadow: 0 0 0.5rem var(--border-color);
 
     width:         30%;
-    height:        26.5rem;
+    height:        31.5rem;
     max-width:     20.0rem;
     margin-top:    2.0rem;
     margin-bottom: 2.0rem;
